--- a/MedOnTime-WebApp/MedOnTime-WebApp/wwwroot/css/site.css
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/wwwroot/css/site.css
@@ -1,6 +1,5 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
+﻿
+/* Generated Layout Styles from ASP.NET MVC*/
 a.navbar-brand {
   white-space: normal;
   text-align: center;
