--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Home/Index.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Home/Index.cshtml
@@ -10,25 +10,30 @@
             <a class="homeRoute" asp-action="Login">Login</a>
         </div>
     </section>
-    @*else*@
-    <section>
-        <!--To have patient data shown-->
-        <img id="homeCalendar" src="~/img/calendarIcon.png" alt="Calendar Icon" />
-        <table>
-            @*foreach(var patient in Model.Petients)
-            {
-                <tr>
-                    <td>
-                        <form method="post" asp-action="Patient_Detail">
-                            <input type="hidden" asp-for="viewModel.PatientId" value="patient.PatientId" />
-                            <img src="patient.icon" alt="patient.name" /> 
-                            <input type="submit" value="patient.name" />
-                        </form>
-                    </td>
-                </tr>
-            }
-            *@
-        </table>
-        <h4>No Patient Added</h4>
+    <section id="medication-panel">
+        <!--To have medical data shown-->
+        <h4>No Medications Added</h4>
+        <a class="homeRoute" asp-action="MedicationForm">Add Medication</a>
     </section>
+    @*else*@
+    @*<section>
+            <!--To have patient data shown-->
+            <img id="homeCalendar" src="~/img/calendarIcon.png" alt="Calendar Icon" />
+            <table>
+                @*foreach(var patient in Model.Petients)
+                {
+                    <tr>
+                        <td>
+                            <form method="post" asp-action="Patient_Detail">
+                                <input type="hidden" asp-for="viewModel.PatientId" value="patient.PatientId" />
+                                <img src="patient.icon" alt="patient.name" />
+                                <input type="submit" value="patient.name" />
+                            </form>
+                        </td>
+                    </tr>
+                }
+
+            </table>
+            <h4>No Patient Added</h4>
+        </section>  *@
 </div>
