Renamed the Controller for medication, added list view for all meds.

--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Home/Index.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     <section id="medication-panel">
         <!--To have medical data shown-->
         <h4>No Medications Added</h4>
-        <a class="homeRoute" asp-controller="MedicationForm" asp-action="MedicationForm">Add Medication</a>
+        <a class="homeRoute" asp-controller="Medication" asp-action="MedicationForm">Add Medication</a>
     </section>
     @*else*@
     @*<section>
