--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Home/Index.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
     <section>
         <img id="homeCalendar" src="~/img/calendarIcon.png" alt="Calendar Icon" />
         <div class="homeButtons">
-            <a class="homeRoute" asp-action="Register">Register</a>
-            <a class="homeRoute" asp-action="Login">Login</a>
+            <a class="homeRoute" asp-controller="Caretaker" asp-action="Register">Register</a>
+            <a class="homeRoute" asp-controller="Caretaker" asp-action="Login">Login</a>
         </div>
     </section>
     <section id="medication-panel">
