Able to use API for medications

--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
@@ -36,7 +36,7 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "MedicationEdit", new { medID = Model.MedID }) |
-    @Html.ActionLink("Delete", "MedicationDelete", new { medID = Model.MedID }) |
+    @Html.ActionLink("Edit", "MedicationEdit", new { Id = Model.Id }) |
+    @Html.ActionLink("Delete", "MedicationDelete", new { Id = Model.Id }) |
     @Html.ActionLink("Back to list", "MedicationList")
 </div>
