--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDelete.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDelete.cshtml
@@ -20,7 +20,7 @@
             </td>
             <td>
                 <form asp-action="MedicationDetails" method="get">
-                    <input type="hidden" name="medID" value="@Model.MedID" />
+                    <input type="hidden" name="Id" value="@Model.Id" />
                     <input type="submit" value="No" class="btn btn-primary" />
                 </form>
             </td>
@@ -58,6 +58,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "MedicationEdit", new { medID = Model.MedID }) |
+    @Html.ActionLink("Edit", "MedicationEdit", new { Id = Model.Id }) |
     @Html.ActionLink("Back to list", "MedicationList")
 </div>
