AddPatient form now saves a MongoDB  Patient collection.

--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Home/Index.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "MedOnTime Home";
 }
+
+<!--TODO: Make a table with Patient Info displaying -->
+
 <div id="homeFlexRow">
     @if (!LoginStatus.IsLoggedIn)
     {
