--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Caretaker/Patient/AddPatient.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Caretaker/Patient/AddPatient.cshtml
@@ -1,4 +1,4 @@
-﻿@model Patient
+﻿
 @{ ViewData["Title"] = "MedOnTime Add Patient"; }
 
 <section id="registerHeadingFlexRow">
@@ -8,34 +8,35 @@
 <section>
     <div class="alert-danger text-left" asp-validation-summary="All"></div>
     <form asp-action="AddPatient" asp-controller="Patient" method="post">
-        <!--Username field-->
-        @if (!"".Equals(ViewBag.Message))
-        {
-    <div class="alert-danger">@ViewBag.Message</div>}
+        <!--Patient ID field-->
+        <div class="registerField">
+            <label for="PatientID">Patient ID</label>
+            <input type="number" value="1" readonly class="form-control" name="PatientID" />
+        </div>
         <!--First Name field-->
         <div class="registerField">
-            <label asp-for="FirstName">First Name</label>
-            <input class="form-control" asp-for="FirstName" />
+            <label for="FirstName">First Name</label>
+            <input type="text" class="form-control" name="FirstName" />
         </div>
         <!--Last Name field-->
         <div class="registerField">
-            <label asp-for="LastName">Last Name</label>
-            <input class="form-control" asp-for="LastName" />
+            <label for="LastName">Last Name</label>
+            <input type="text" class="form-control" name="LastName" />
         </div>
         <!--Email field-->
         <div class="registerField">
-            <label asp-for="Email">Email</label>
-            <input class="form-control" asp-for="Email" />
+            <label for="Email">Email</label>
+            <input type="text" class="form-control" name="Email" />
         </div>
         <!--Phone number field-->
         <div class="registerField">
-            <label asp-for="PhoneNum">Phone No.</label>
-            <input class="form-control" asp-for="PhoneNum" />
+            <label for="PhoneNum">Phone No.</label>
+            <input type="number" class="form-control" name="PhoneNum" />
         </div>
         <!--Age field-->
         <div class="registerField">
-            <label asp-for="Age">Age</label>
-            <input type="number" asp-for="Age" />
+            <label for="Age">Age</label>
+            <input type="number" name="Age" />
         </div>
         <input type="submit" value="Create Patient Profile" />
     </form>
