Updated models based on Kendrick's code snippet & refactored CaretakerController & Index.cshtml.

--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Home/Index.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Home/Index.cshtml
@@ -25,10 +25,10 @@
         <section>
             <!--To have patient data shown-->
             <img id="homeCalendar" src="~/img/calendarIcon.png" alt="Calendar Icon" />
-            @if (LoginStatus.LogginedUser.Patients.Count() != 0)
+            @if (LoginStatus.LogginedUser.PatientIDs.Count() != 0)
             {
                 <table>
-                    @foreach (var patient in LoginStatus.LogginedUser.Patients)
+                    @foreach (var patient in LoginStatus.LogginedUser.PatientIDs)
                     {
                         <tr>
                             <td>
