--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Caretaker/Register.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Caretaker/Register.cshtml
@@ -9,7 +9,7 @@
 </section>
 <section>
     <div class="alert-danger text-left" asp-validation-summary="All"></div>
-    <form action="Register" method="post">
+    <form asp-action="Register" method="post">
         <!--Username field-->
         @if (!"".Equals(ViewBag.Message))
         {
