--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
@@ -13,7 +13,7 @@
             Medication ID
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MedID)
+            @Html.DisplayFor(model => model.Id)
         </dd>
         <dt class="col-sm-2">
             Medication Name
