--- a/MedOnTime-WebApp/MedOnTime-WebApp/wwwroot/css/style.css
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/wwwroot/css/style.css
@@ -1,9 +1,15 @@
 ﻿/*General Styles*/
+body, html {
+    margin: 0;
+    padding: 0;
+}
+
 label {
     font-size: 15px;
 }
 
 input {
+    text-align: center;
     min-height: 20px;
 }
 
@@ -29,9 +35,10 @@ td {
     background-color: rgb(255 188 197);
     opacity: 0%;
     padding: 15px;
-    position: relative;
-    right: 5px;
-    bottom: 22px;
+    position: absolute;
+    left: -10px;
+    top: 60px;
+    
 }
 
 .nav-icon, #home-icon, #calendar-icon, #pill-icon, #peoples-icon {
@@ -39,12 +46,20 @@ td {
 }
 
 /* Index.cshtml styles */
-#homeCalendar {
+/*#homeCalendar {
     height: 200px;
+}*/
+
+.homeContent {
+    /*position: absolute;*/
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .homeRoute, input[type="submit"] {
-    font-size: 15px;
+    font-size: 100%;
     padding: 10px;
     text-decoration: none;
     background-color: rgb(255, 133, 149);
@@ -82,6 +97,7 @@ td {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 20px;
 }
 
 /* Medication Form styles */
@@ -93,3 +109,9 @@ td {
 .heartBeatIcon {
     height: 50px;
 }
+
+
+/*Mobile Styles*/
+/*@media only screen and (max-width: 600px) {
+    
+}*/
