--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Caretaker/Login.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Caretaker/Login.cshtml
@@ -8,13 +8,13 @@
 <form action="Login" method="post">
     <!--Email field-->
     <div class="registerField">
-        <label>Email</label>
-        <input type="email" name="email" />
+        <label class="form-label" for="email">Email</label>
+        <input class="form-control" type="email" name="email" />
     </div>
     <!--Password field-->
     <div class="registerField">
-        <label>Password</label>
-        <input type="password" name="password" />
+        <label class="form-label" for="email">Password</label>
+        <input class="form-control" type="password" name="password" />
         <a href="#">Forgot Password?</a>
     </div>
     <input type="submit" value="Login" />
