--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Shared/_Layout.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Shared/_Layout.cshtml
@@ -16,14 +16,20 @@
             </button>
             <div class="container">
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-row">
                         <li class="nav-item">
                             <a class="navbar-brand" id="medOnTime-title" asp-area="" asp-controller="Home" asp-action="Index">MedOnTime</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="PatientProfile">
-                            <img class="nav-icon" src="~/img/profile-icon.png" alt="Profile Icon" />
-                        </a>
+                            <!-- To start email notification & use subscription model -->
+                            <a class="nav-link text-dark">
+                                <img class="nav-icon" src="~/img/notification-icon.png" alt="Notification Icon" />
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Caretaker" asp-action="Register">
+                                <img class="nav-icon" src="~/img/profile-icon.png" alt="Profile Icon" />
+                            </a>
                         </li>
                     </ul>
                 </div>
