--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDetails.cshtml
@@ -16,6 +16,18 @@
             @Html.DisplayFor(model => model.Id)
         </dd>
         <dt class="col-sm-2">
+            Caretaker ID
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CaretakerID)
+        </dd>
+        <dt class="col-sm-2">
+            Patient ID
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PatientID)
+        </dd>
+        <dt class="col-sm-2">
             Medication Name
         </dt>
         <dd class="col-sm-10">
@@ -32,6 +44,24 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.MedicationType)
+        </dd>
+        <dt class="col-sm-2">
+            Quantity
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Quantity)
+        </dd>
+        <dt class="col-sm-2">
+            Time Of Taking
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TimeOfTaking)
+        </dd>
+        <dt class="col-sm-2">
+            Frequency
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Frequency)
         </dd>
     </dl>
 </div>
