--- a/MedOnTime-WebApp/MedOnTime-WebApp/wwwroot/css/style.css
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/wwwroot/css/style.css
@@ -115,3 +115,71 @@ td {
 /*@media only screen and (max-width: 600px) {
     
 }*/
+
+/*Time Picker Styles*/
+.timepicker {
+    width: 250px;
+    position: relative;
+}
+
+table.timepicker {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border-collapse: collapse;
+    background-color: #fff;
+    border: 1px solid #E0E0E0;
+    font: normal 13px "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+    -moz-box-shadow: 0 1px 5px #DFDFDF;
+    -webkit-box-shadow: 0 1px 5px #DFDFDF;
+    box-shadow: 0 1px 5px #DFDFDF;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    top: 40px;
+    left: -70px;
+    position: absolute;
+    display: none;
+    z-index: 100;
+}
+
+    table.timepicker th {
+        text-align: center;
+        color: #333;
+        padding: 5px 0;
+        font-size: 15px;
+        font-weight: 600;
+    }
+
+    table.timepicker td {
+        padding: 3px 6px;
+        color: #333;
+        margin: 0;
+        cursor: pointer;
+        text-align: center;
+        vertical-align: middle;
+        border: 1px solid #E4E4E4;
+        transition: all 600ms ease-in-out;
+        -webkit-transition: all 600ms ease-in-out;
+        -moz-transition: all 600ms ease-in-out;
+        -o-transition: all 600ms ease-in-out;
+    }
+
+        table.timepicker td:hover {
+            background-color: #F0F0F0;
+            color: #929292;
+            -moz-box-shadow: inset 0 0 5px 1px #DFDFDF;
+            -webkit-box-shadow: inset 0 0 5px 1px #DFDFDF;
+            box-shadow: inset 0 0 5px 1px #DFDFDF;
+        }
+
+.timepickinput {
+    text-align:center;
+    padding: 10px 12px 8px 30px;
+    background: url('http://cdn3.iconfinder.com/data/icons/linecons-free-vector-icons-pack/32/clock-32.png') no-repeat -5px 5px;
+    border: 0;
+    width: 85px;
+    font: 400 18px/100% Georgia, Times, "Times New Roman", serif;
+    color: #222;
+    
+}
